# automatic-eureka

./: CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-ci.yml
java/: README.md
java/sample-application-1/: README.md  fly.toml  pom.xml
java/sample-application-1/src/main/java/uk/co/agilesolutions/agileetc/sampleapplication1/: SampleApplication1Application.java
java/sample-application-1/src/main/resources/: application.properties
java/sample-application-1/src/test/java/uk/co/agilesolutions/agileetc/sampleapplication1/: SampleApplication1ApplicationTests.java
python/: README.md
python/agileetc/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
python/agileetc/data/: sample.yml
python/agileetc/scripts/: check.sh  release.sh
python/agileetc/src/agileetc/: __init__.py  cli.py  sample.py  terminal.py
python/agileetc/tests/agileetc/: cli.py  sample_test.py
