[tool.poetry]
name = "agileetc"
version = "0.0.1"
description = "Future Agile CICD tooling"
authors = ["agileturret <Paul.Gilligan@agilesolutions.co.uk>"]

[tool.poetry.scripts]
agileetc = "agileetc.cli:cli"

[tool.poetry.dependencies]
python = "^2.7"
click = "^8.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
bumpversion = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."agileetc/__init__.py"]